# AShareSignal

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  ROADMAP.md  daily_profit_update.py  decison_01.md  get_entry_price.py  get_pm_open.py  main.py  pyproject.toml  test_akshare_minute.py  test_pytdx_minute.py  update_entry_price.py
scripts/: analyze_afternoon_feature.py  analyze_loss_features.py  auto_bookmark_sync.py  backfill_daily.py  backfill_minute.py  backfill_minute_cache.py  backfill_screening_20260326.py  batch_filter.py  batch_process_history_dates.py  calculate_daily_portfolio_return.py  calculate_new_dates_return.py  calculate_pool_return.py  calculate_top3_return.py  daily_screen_and_notify.py  daily_stock_reminder.py  get_need_process_dates.py  organize_output.py  signal2_performance.py  signal3_factor_analysis.py  signal_filter.py  simple_strategy_test.py  stat_afternoon_result.py  stock_analysis_20260414.py  stock_pool_tracking.py  test_tdx_minute_date_range.py
src/: accumulate_pool_data.py  akshare_minute.py  analyze_discrimination.py  autoresearch.py  backtest_engine.py  backtest_morning.py  backtest_screening.py  batch_verify_all_dates.py  batch_verify_pytdx.py  build_dataset.py  champion_evaluator.py  cli.py  config.py  download_pool_minute.py  experiment_006.py  experiment_01_veto.py  experiment_02_entry_timing.py  experiment_03_entry_exit_matrix.py  experiment_04_regime.py  experiment_05_pre_veto.py  experiment_logger.py  generate_report.py  integrated_features.py  minute_data_manager.py  morning_features.py  predict_hybrid.py  (+13 more)
(+26 files in other folders)
